--- a/day1-2.ipynb
+++ b/day1-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,57 +176,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Request was successful!\n",
-      "Response data: {'model': 'phi3', 'created_at': '2024-06-17T08:34:40.964267Z', 'response': ' history teacher\\n\\nExplanation: The given user request asks about a historical fact, specifically the capital city of France. This topic falls under the expertise of a history teacher rather than a math teacher. A history teacher would be able to provide information on this question based on their knowledge in geography and world history.', 'done': True, 'done_reason': 'stop', 'context': [32010, 32006, 887, 3683, 1475, 3692, 263, 1404, 2009, 338, 901, 13907, 363, 263, 5844, 15703, 21411, 470, 263, 4955, 15703, 21411, 29889, 29871, 13, 29943, 2952, 1438, 6576, 29901, 13, 13, 29896, 29889, 3579, 7648, 1598, 278, 5469, 310, 278, 1404, 2009, 1068, 29901, 5953, 837, 457, 565, 278, 2009, 20789, 5844, 29899, 12817, 22001, 470, 15839, 4959, 29889, 13, 13, 29906, 29889, 3579, 13696, 1241, 278, 3030, 310, 278, 2009, 1068, 29901, 11597, 29891, 911, 278, 2793, 304, 1074, 565, 372, 7595, 29879, 901, 411, 19475, 1108, 29899, 2929, 1747, 470, 15839, 7418, 29889, 13, 13, 29941, 29889, 3579, 1888, 22094, 1023, 1422, 2902, 1372, 1068, 29901, 28908, 263, 5844, 15703, 322, 263, 4955, 15703, 13138, 20890, 304, 278, 2009, 2729, 373, 1009, 17924, 895, 29889, 13, 13, 29946, 29889, 3579, 29923, 4387, 403, 278, 2009, 1068, 29901, 897, 8204, 607, 15703, 21411, 313, 755, 470, 4955, 29897, 723, 367, 901, 8210, 304, 3211, 278, 1404, 2009, 29889, 13, 13, 29945, 29889, 3579, 18759, 1962, 1068, 29901, 3387, 1234, 2845, 376, 755, 15703, 29908, 470, 376, 18434, 6860, 29908, 322, 376, 9290, 29908, 565, 372, 451, 14393, 304, 1716, 29889, 13, 32007, 32010, 1724, 338, 3444, 29915, 29879, 7483, 29973, 32007, 32007, 32001, 4955, 15703, 13, 13, 1252, 9018, 362, 29901, 450, 2183, 1404, 2009, 19514, 1048, 263, 15839, 2114, 29892, 10816, 278, 7483, 4272, 310, 3444, 29889, 910, 11261, 20074, 1090, 278, 17924, 895, 310, 263, 4955, 15703, 3265, 1135, 263, 5844, 15703, 29889, 319, 4955, 15703, 723, 367, 2221, 304, 3867, 2472, 373, 445, 1139, 2729, 373, 1009, 7134, 297, 1737, 5275, 322, 3186, 4955, 29889, 32007], 'total_duration': 1361546792, 'load_duration': 2870500, 'prompt_eval_count': 204, 'prompt_eval_duration': 410836000, 'eval_count': 66, 'eval_duration': 946765000}\n"
+      "Generated answer for 'What are the key elements of Greek mythology?':  #Answer: history teacher\n",
+      "\n",
+      "The key elements of Greek mythology involve understanding various gods, goddesses, heroes, creatures, and mythical events that shaped ancient Greek culture and beliefs. As a history teacher specializing in this topic, I would provide insights into these mythological themes, their historical context, and influence on modern society. - Expected type: none\n",
+      "Generated answer for 'Describe the characteristics of Renaissance art.':  #Answer: history teacher\n",
+      "\n",
+      "#Reasoning: The request is asking for information about the characteristics of a historical period, specifically Renaissance art. This topic falls under history and would be most appropriately addressed by a history teacher, who specializes in understanding and explaining historical events, periods, and cultural phenomena like the Renaissance era. - Expected type: none\n",
+      "Generated answer for 'What are the main themes in Shakespearean literature?':  #Answer: history teacher\n",
+      "\n",
+      "#Imagined Responses: \n",
+      "Math Teacher - While math can be found subtly throughout literary works, including those of Shakespeare, it isn't the primary focus. A more suitable response would involve analyzing any mathematical concepts present in his plays if that were a user request.\n",
+      "\n",
+      "History Teacher - The main themes in Shakespearean literature include power and ambition (Macbeth), love and jealousy (Othello), betrayal (Julius Caesar), fate vs free will (Hamlet) among others. These themes are deeply rooted in the social, political, and cultural contexts of Elizabethan England. - Expected type: none\n",
+      "\n",
+      "Total questions: 19\n",
+      "Correct answers: 16\n",
+      "Final score: 84.21%\n"
      ]
     }
    ],
    "source": [
-    "import requests\n",
+    "correct_answers = 0\n",
     "\n",
-    "# Define the API endpoint\n",
-    "url = \"http://localhost:11434/api/generate\"\n",
+    "for question in questions:\n",
+    "    full_prompt = prompt_template.format(question[\"question\"])\n",
     "\n",
-    "# Define the payload\n",
-    "payload = {\n",
-    "    \"model\": \"phi3\",\n",
-    "    \"prompt\": \"\"\"\n",
-    "<|system|>\n",
-    "You determines whether a user request is more suitable for a math teacher persona or a history teacher persona. \n",
-    "Follow these steps:\n",
+    "    payload = {\n",
+    "        \"model\": \"phi3\",\n",
+    "        \"prompt\": full_prompt,\n",
+    "        \"stream\": False\n",
+    "    }\n",
     "\n",
-    "1. **Identify the nature of the user request**: Determine if the request involves math-related concepts or historical events.\n",
+    "    response = requests.post(url, json=payload)\n",
     "\n",
-    "2. **Consider the context of the request**: Analyze the content to see if it aligns more with mathematical problem-solving or historical analysis.\n",
+    "    if response.status_code == 200:\n",
+    "        api_response = response.json()\n",
+    "        if \"response\" in api_response:\n",
+    "            generated_answer = api_response[\"response\"]\n",
+    "            # print(api_response[\"response\"])\n",
     "\n",
-    "3. **Imagine two different experts**: Picture a math teacher and a history teacher providing responses to the request based on their expertise.\n",
+    "            if (question[\"type\"] == \"history\" and \"history\" in generated_answer.lower()) or \\\n",
+    "               (question[\"type\"] == \"math\" and \"math\" in generated_answer.lower()) or \\\n",
+    "               (question[\"type\"] == \"none\" and \"none\" in generated_answer.lower()):\n",
+    "                correct_answers += 1\n",
+    "            else:\n",
+    "                print(f\"Generated answer for '{question['question']}': {generated_answer} - Expected type: {question['type']}\")\n",
     "\n",
-    "4. **Evaluate the request**: Decide which teacher persona (math or history) would be more appropriate to address the user request.\n",
+    "    else:\n",
+    "        print(f\"Request failed with status code {response.status_code}\")\n",
+    "        print(\"Error message:\", response.text)\n",
     "\n",
-    "5. answer in format \"Answer: math teacher\" or \"Answer: history teacher\" and \"Answer: none\" if not belongs to both.\n",
-    "<|user|>\n",
-    "What is France's capital?<|end|>\n",
-    "    \"\"\",\n",
-    "    \"stream\": False\n",
-    "}\n",
+    "score = correct_answers / total_questions * 100\n",
     "\n",
-    "# Send the POST request\n",
-    "response = requests.post(url, json=payload)\n",
-    "\n",
-    "# Check if the request was successful\n",
-    "if response.status_code == 200:\n",
-    "    print(\"Request was successful!\")\n",
-    "    print(\"Response data:\", response.json())\n",
-    "else:\n",
-    "    print(f\"Request failed with status code {response.status_code}\")\n",
-    "    print(\"Error message:\", response.text)\n"
+    "print(f\"\\nTotal questions: {total_questions}\")\n",
+    "print(f\"Correct answers: {correct_answers}\")\n",
+    "print(f\"Final score: {score:.2f}%\")\n"
    ]
   },
   {
@@ -283,7 +294,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -301,5 +312,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
