--- a/day1-2.ipynb
+++ b/day1-2.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Defining persona : History vs Math teacher (routing prompt)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -88,72 +95,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/june/Desktop/myvenv/lib/python3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Generated answer for 'What are the key elements of Greek mythology?': #Answer: history teacher - Expected type: none\n",
-      "Generated answer for 'What is the role of ethics in philosophy?': #Answer: history teacher - Expected type: none\n",
       "Generated answer for 'Explain the concept of existentialism in modern philosophy.': #Answer: history teacher - Expected type: none\n",
       "Generated answer for 'Describe the characteristics of Renaissance art.': #Answer: history teacher - Expected type: none\n",
       "Generated answer for 'What are the main themes in Shakespearean literature?': #Answer: history teacher - Expected type: none\n",
       "\n",
       "Total questions: 19\n",
-      "Correct answers: 14\n",
-      "Final score: 73.68%\n"
+      "Correct answers: 15\n",
+      "Final score: 78.95%\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "\n",
-    "# Define the API endpoint\n",
     "url = \"http://localhost:11434/api/generate\"\n",
     "\n",
-    "# Prepare the prompt template\n",
     "prompt_template = \"\"\"\n",
-    "system: Determines if the user request is suitable for a math teacher persona or a history teacher persona.\n",
+    "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "\n",
+    "Determines if the user request is suitable for a math teacher persona or a history teacher persona.\n",
     "Follow these steps:\n",
     "1. Identify the nature of the user request. Determine if the request involves math-related concepts or historical events.\n",
     "2. Consider the context of the request. Analyze if the content aligns with mathematical problem-solving or historical analysis.\n",
     "3. Imagine two different experts. Picture a math teacher and a history teacher providing responses to the request based on their expertise.\n",
     "4. Evaluate the request. Decide which teacher persona (math or history) is appropriate to address the user request.\n",
-    "5. Answer in the format \"#Answer: math teacher\" or \"#Answer: history teacher\" and \"#Answer: none\" if it does not belong to either.\n",
+    "5. Answer in the format \"#Answer: math teacher\" or \"#Answer: history teacher\" and \"#Answer: none\" if it does not belong to either.<|eot_id|>\n",
+    "<|start_header_id|>user<|end_header_id|>\n",
     "\n",
-    "user: {}\n",
-    "assistant:\n",
+    "{}<|eot_id|>\n",
+    "<|start_header_id|>assistant<|end_header_id|>\n",
     "\"\"\"\n",
     "\n",
-    "# Initialize variables for tracking correct answers and total questions\n",
     "correct_answers = 0\n",
     "total_questions = len(questions)\n",
     "\n",
-    "# Iterate through each question\n",
     "for question in questions:\n",
-    "    # Construct the full prompt with user question\n",
     "    full_prompt = prompt_template.format(question[\"question\"])\n",
     "\n",
-    "    # Define the payload for the API request\n",
     "    payload = {\n",
     "        \"model\": \"llama3\",\n",
     "        \"prompt\": full_prompt,\n",
     "        \"stream\": False\n",
     "    }\n",
     "\n",
-    "    # Send the POST request\n",
     "    response = requests.post(url, json=payload)\n",
     "\n",
-    "    # Check if the request was successful\n",
     "    if response.status_code == 200:\n",
     "        api_response = response.json()\n",
     "        if \"response\" in api_response:\n",
     "            generated_answer = api_response[\"response\"]\n",
     "            # print(api_response[\"response\"])\n",
     "\n",
-    "            # Determine if the generated answer matches the expected type\n",
     "            if (question[\"type\"] == \"history\" and \"history\" in generated_answer.lower()) or \\\n",
     "               (question[\"type\"] == \"math\" and \"math\" in generated_answer.lower()) or \\\n",
     "               (question[\"type\"] == \"none\" and \"none\" in generated_answer.lower()):\n",
@@ -184,21 +192,21 @@
      "output_type": "stream",
      "text": [
       "Generated answer for 'What are the key elements of Greek mythology?':  #Answer: history teacher\n",
+      "#Reasoning: The user request asks about the key elements of Greek mythology, which falls under historical and cultural analysis. A history teacher would be better suited to provide information on this topic compared to a math teacher. - Expected type: none\n",
+      "Generated answer for 'What is the role of ethics in philosophy?':  #Answer: history teacher\n",
+      "#Reasoning: The user request pertains to the exploration of a philosophical concept, ethics, which is typically studied within the context of its historical development and influential thinkers. A history teacher would be best suited to address this topic by discussing various schools of thought and key figures in the evolution of ethical philosophy throughout time. However, it should be noted that an interdisciplinary approach involving both a math teacher (for logical analysis) and a history teacher could provide valuable insights into how ethics is applied across different fields. In this case, \"#Answer: history teacher\" seems most appropriate given the specific nature of the request. - Expected type: none\n",
+      "Generated answer for 'Explain the concept of existentialism in modern philosophy.':  #Answer: history teacher\n",
+      "#Reasoning: The request is related to explaining a philosophical concept, which typically falls under the domain of humanities and history rather than mathematics. However, if we were imagining a mathematician providing an explanation, it would involve interpreting existentialism through mathematical concepts or logic structures, but this scenario isn't typical for user requests regarding philosophy explanations.\n",
       "\n",
-      "The key elements of Greek mythology involve understanding various gods, goddesses, heroes, creatures, and mythical events that shaped ancient Greek culture and beliefs. As a history teacher specializing in this topic, I would provide insights into these mythological themes, their historical context, and influence on modern society. - Expected type: none\n",
+      "To fulfill the request from a historical perspective: Existentialism is a modern philosophical movement that emerged in the 20th century, emphasizing individual freedom and choice as fundamental aspects of human existence. It challenges traditional views by focusing on personal responsibility and the search for meaning within an often indifferent or even absurd universe. Key figures in existentialist thought include Søren Kierkegaard, Friedrich Nietzsche, Jean-Paul Sartre, and Albert Camus. This philosophy has had a significant impact on modern literature, arts, and social movements, shaping our understanding of the human condition and personal identity. - Expected type: none\n",
       "Generated answer for 'Describe the characteristics of Renaissance art.':  #Answer: history teacher\n",
-      "\n",
-      "#Reasoning: The request is asking for information about the characteristics of a historical period, specifically Renaissance art. This topic falls under history and would be most appropriately addressed by a history teacher, who specializes in understanding and explaining historical events, periods, and cultural phenomena like the Renaissance era. - Expected type: none\n",
+      "#Reasoning: The request is asking for information about the characteristics of Renaissance art, which involves historical analysis and knowledge. A history teacher would be best suited to provide an answer on this topic. - Expected type: none\n",
       "Generated answer for 'What are the main themes in Shakespearean literature?':  #Answer: history teacher\n",
-      "\n",
-      "#Imagined Responses: \n",
-      "Math Teacher - While math can be found subtly throughout literary works, including those of Shakespeare, it isn't the primary focus. A more suitable response would involve analyzing any mathematical concepts present in his plays if that were a user request.\n",
-      "\n",
-      "History Teacher - The main themes in Shakespearean literature include power and ambition (Macbeth), love and jealousy (Othello), betrayal (Julius Caesar), fate vs free will (Hamlet) among others. These themes are deeply rooted in the social, political, and cultural contexts of Elizabethan England. - Expected type: none\n",
+      "#Reasoning: The user request is asking about the main themes found within Shakespearean literature, which falls under historical analysis and literary studies. This subject matter would be more appropriate for a history teacher or an English literature expert rather than a math teacher. However, since this topic leans towards humanities, it's slightly closer to a history teacher's domain as it involves studying the works of a prominent playwright from a specific time period in history. A specialized literature professor could also be a suitable responder for this inquiry. - Expected type: none\n",
       "\n",
       "Total questions: 19\n",
-      "Correct answers: 16\n",
-      "Final score: 84.21%\n"
+      "Correct answers: 14\n",
+      "Final score: 73.68%\n"
      ]
     }
    ],
@@ -206,6 +214,19 @@
     "correct_answers = 0\n",
     "\n",
     "for question in questions:\n",
+    "    prompt_template = \"\"\"\n",
+    "    <|start_header_id|>system<|end_header_id|>\n",
+    "    Determines if the user request is suitable for a math teacher persona or a history teacher persona.\n",
+    "    Follow these steps:\n",
+    "    1. Identify the nature of the user request. Determine if the request involves math-related concepts or historical events.\n",
+    "    2. Consider the context of the request. Analyze if the content aligns with mathematical problem-solving or historical analysis.\n",
+    "    3. Imagine two different experts. Picture a math teacher and a history teacher providing responses to the request based on their expertise.\n",
+    "    4. Evaluate the request. Decide which teacher persona (math or history) is appropriate to address the user request.\n",
+    "    5. Answer in the format \"#Answer: math teacher\" or \"#Answer: history teacher\" and \"#Answer: none\" if it does not belong to either.<|eot_id|>\n",
+    "    <|start_header_id|>user<|end_header_id|>\n",
+    "    {}<|eot_id|>\n",
+    "    <|start_header_id|>assistant<|end_header_id|>\n",
+    "    \"\"\"\n",
     "    full_prompt = prompt_template.format(question[\"question\"])\n",
     "\n",
     "    payload = {\n",
@@ -241,49 +262,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Algorithm prompt"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_cases = [{\n",
+    "    \"input\": [88, 1, 2, 9, 55],\n",
+    "    \"output\": [1, 2, 9, 55, 88]\n",
+    "},\n",
+    "{\n",
+    "    \"input\": [100, 3, 45, 2, 7, 18, 1, 99],\n",
+    "    \"output\": [1, 2, 3, 7, 18, 45, 99, 100]\n",
+    "},\n",
+    "{\n",
+    "    \"input\": [5, 4, 2, 1, 3],\n",
+    "    \"output\": [1, 2, 3, 4, 5]\n",
+    "}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Request was successful!\n",
-      "Response data: {'model': 'llama3', 'created_at': '2024-06-17T08:48:57.73263Z', 'response': 'Here is the sorted list in ascending order:\\n\\n-88, 1, 2, 9, 55', 'done': True, 'done_reason': 'stop', 'context': [128006, 882, 128007, 1432, 257, 128000, 128006, 9125, 128007, 198, 2675, 690, 5371, 264, 1160, 323, 29373, 296, 5219, 4315, 5933, 5219, 505, 220, 16, 311, 308, 627, 5618, 3460, 279, 1160, 304, 20382, 2015, 627, 128009, 198, 128006, 882, 128007, 198, 12, 2421, 11, 220, 16, 11, 220, 17, 11, 220, 24, 11, 220, 2131, 128009, 128006, 78191, 128007, 198, 257, 128009, 128006, 78191, 128007, 271, 8586, 374, 279, 10839, 1160, 304, 36488, 2015, 1473, 12, 2421, 11, 220, 16, 11, 220, 17, 11, 220, 24, 11, 220, 2131, 128009], 'total_duration': 660395542, 'load_duration': 1533542, 'prompt_eval_count': 25, 'prompt_eval_duration': 224858000, 'eval_count': 24, 'eval_duration': 433205000}\n"
+      "#Answer: [1, 2, 9, 55, 88]\n",
+      "Answer: [1, 2, 3, 7, 18, 45, 99, 100]\n",
+      "#Answer [1, 2, 3, 4, 5]\n",
+      "\n",
+      "Total questions: 3\n",
+      "Correct answers: 3\n",
+      "Final score: 100.00%\n"
      ]
     }
    ],
    "source": [
-    "import requests\n",
+    "import re\n",
     "\n",
-    "# Define the API endpoint\n",
-    "url = \"http://localhost:11434/api/generate\"\n",
+    "correct_answers = 0\n",
+    "total_questions = len(test_cases)\n",
     "\n",
-    "# Define the payload\n",
-    "payload = {\n",
-    "    \"model\": \"llama3\",\n",
-    "    \"prompt\": \"\"\"\n",
-    "    <|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "prompt_template = \"\"\"\n",
+    "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "    \n",
     "You will receive a list and sorting m numbers among natural numbers from 1 to n.\n",
-    "Please sort the list in ASC order.\n",
+    "Please sort the list in ASC order in below format:\n",
+    "#Answer [list of numbers]\n",
     "<|eot_id|>\n",
     "<|start_header_id|>user<|end_header_id|>\n",
-    "-88, 1, 2, 9, 55<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
-    "    \"\"\",\n",
-    "    \"stream\": False\n",
-    "}\n",
     "\n",
-    "# Send the POST request\n",
-    "response = requests.post(url, json=payload)\n",
+    "{}<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
+    "\"\"\"\n",
     "\n",
-    "# Check if the request was successful\n",
-    "if response.status_code == 200:\n",
-    "    print(\"Request was successful!\")\n",
-    "    print(\"Response data:\", response.json())\n",
-    "else:\n",
-    "    print(f\"Request failed with status code {response.status_code}\")\n",
-    "    print(\"Error message:\", response.text)\n"
+    "for case in test_cases:\n",
+    "    full_prompt = prompt_template.format(case[\"input\"])\n",
+    "    \n",
+    "    payload = {\n",
+    "            \"model\": \"llama3\",\n",
+    "            \"prompt\": full_prompt,\n",
+    "            \"stream\": False\n",
+    "        }\n",
+    "    \n",
+    "    response = requests.post(url, json=payload)\n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "        api_response = response.json()\n",
+    "        if \"response\" in api_response:\n",
+    "            generated_answer = api_response[\"response\"]\n",
+    "            # print(api_response[\"response\"])\n",
+    "            numbers = re.findall(r'\\d+', generated_answer)\n",
+    "\n",
+    "            numbers = list(map(int, numbers))\n",
+    "\n",
+    "            if numbers == case[\"output\"]:\n",
+    "                correct_answers += 1\n",
+    "            else:\n",
+    "                print(f\"Generated answer for '{case['input']}': {generated_answer} - Expected answer: {case['output']}\")\n",
+    "\n",
+    "    else:\n",
+    "        print(f\"Request failed with status code {response.status_code}\")\n",
+    "        print(\"Error message:\", response.text)\n",
+    "\n",
+    "score = correct_answers / total_questions * 100\n",
+    "\n",
+    "print(f\"\\nTotal questions: {total_questions}\")\n",
+    "print(f\"Correct answers: {correct_answers}\")\n",
+    "print(f\"Final score: {score:.2f}%\")\n",
+    "\n"
    ]
   },
   {
