fix: relevance checker llm 사용하도록 수정

--- a/day2.ipynb
+++ b/day2.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "id": "fba5d68a-d340-41b5-bbe1-60dd64bb74b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/june/Desktop/myvenv/lib/python3.9/site-packages/urllib3/__init__.py:34: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.chat_models import ChatOllama\n",
     "llm = ChatOllama(model='llama3', temperature=0)"
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "id": "9ed0fe86-f42e-4fa3-8d3c-3ee6e9ef7f48",
    "metadata": {},
    "outputs": [],
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "id": "7bc2f3e5-9173-4c8a-a4c0-dacee3917ee5",
    "metadata": {},
    "outputs": [],
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "id": "e9c16b03-51d0-4b08-83c9-93f01821bf8c",
    "metadata": {},
    "outputs": [],
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "id": "67650d61-b944-4d40-8275-e0419fb2d844",
    "metadata": {},
    "outputs": [],
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "id": "5e139e95-491a-48a9-9d53-50eea493ef30",
    "metadata": {},
    "outputs": [],
@@ -123,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "id": "987067b9-de9d-4969-a712-9485888fb0b1",
    "metadata": {},
    "outputs": [
@@ -133,7 +142,7 @@
        "6"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,29 +164,15 @@
    "id": "91b1bd90-0ca2-4a97-885b-b4eb479d6502",
    "metadata": {},
    "source": [
-    "## Relevance Check"
+    "## Relevance Check - Try 1 cosine similarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "id": "29d94e48-db33-49ac-aeab-dbe700864e05",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.7727910001943669\n",
-      "0.7661705053070712\n",
-      "0.7979500562752266\n",
-      "0.7510829761761391\n",
-      "0.7522405097294081\n",
-      "0.7299772381868517\n",
-      "[]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import math\n",
     "from langchain_openai import OpenAIEmbeddings\n",
@@ -216,9 +211,86 @@
     "\n",
     "    return similar_documents\n",
     "\n",
-    "similar_documents = prompt_router(question, rags)\n",
-    "print(similar_documents)\n",
-    "# 어떻게 이 결과를 llm에 넘겨서 없다고 대답하게 하지.. "
+    "# similar_documents = prompt_router(question, rags)\n",
+    "# print(similar_documents)\n",
+    "# 어떻게 이 결과를 llm에 넘겨서 없다고 대답하게 하지.. \n",
+    "# cosine similarity로는 관련도를 제대로 판단을 못하는거 같다 ㅠ.ㅠ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "510bce47-1cfb-4d22-a495-63efe4ea189d",
+   "metadata": {},
+   "source": [
+    "## Relevance Check - Try 2 \bLLM as a Judge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1b95f799-2d26-45fe-8cc5-0cb71a9baf30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('page_content', 'Short-term memory: I would consider all the in-context learning (See Prompt Engineering) as utilizing short-term memory of the model to learn.\\nLong-term memory: This provides the agent with the capability to retain and recall (infinite) information over extended periods, often by leveraging an external vector store and fast retrieval.\\n\\n\\nTool use\\n\\nThe agent learns to call external APIs for extra information that is missing from the model weights (often hard to change after pre-training), including current information, code execution capability, access to proprietary information sources and more.'), ('metadata', {'description': 'Building agents with LLM (large language model) as its core controller is a cool concept. Several proof-of-concepts demos, such as AutoGPT, GPT-Engineer and BabyAGI, serve as inspiring examples. The potentiality of LLM extends beyond generating well-written copies, stories, essays and programs; it can be framed as a powerful general problem solver.\\nAgent System Overview In a LLM-powered autonomous agent system, LLM functions as the agent’s brain, complemented by several key components:', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/', 'title': \"LLM Powered Autonomous Agents | Lil'Log\"}), ('type', 'Document'), ('page_content', 'Short-term memory: I would consider all the in-context learning (See Prompt Engineering) as utilizing short-term memory of the model to learn.\\nLong-term memory: This provides the agent with the capability to retain and recall (infinite) information over extended periods, often by leveraging an external vector store and fast retrieval.\\n\\n\\nTool use'), ('metadata', {'description': 'Building agents with LLM (large language model) as its core controller is a cool concept. Several proof-of-concepts demos, such as AutoGPT, GPT-Engineer and BabyAGI, serve as inspiring examples. The potentiality of LLM extends beyond generating well-written copies, stories, essays and programs; it can be framed as a powerful general problem solver.\\nAgent System Overview In a LLM-powered autonomous agent system, LLM functions as the agent’s brain, complemented by several key components:', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/', 'title': \"LLM Powered Autonomous Agents | Lil'Log\"}), ('type', 'Document'), ('page_content', '... (Repeated many times)'), ('metadata', {'description': 'Building agents with LLM (large language model) as its core controller is a cool concept. Several proof-of-concepts demos, such as AutoGPT, GPT-Engineer and BabyAGI, serve as inspiring examples. The potentiality of LLM extends beyond generating well-written copies, stories, essays and programs; it can be framed as a powerful general problem solver.\\nAgent System Overview In a LLM-powered autonomous agent system, LLM functions as the agent’s brain, complemented by several key components:', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/', 'title': \"LLM Powered Autonomous Agents | Lil'Log\"}), ('type', 'Document'), ('page_content', 'The design of generative agents combines LLM with memory, planning and reflection mechanisms to enable agents to behave conditioned on past experience, as well as to interact with other agents.'), ('metadata', {'description': 'Building agents with LLM (large language model) as its core controller is a cool concept. Several proof-of-concepts demos, such as AutoGPT, GPT-Engineer and BabyAGI, serve as inspiring examples. The potentiality of LLM extends beyond generating well-written copies, stories, essays and programs; it can be framed as a powerful general problem solver.\\nAgent System Overview In a LLM-powered autonomous agent system, LLM functions as the agent’s brain, complemented by several key components:', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/', 'title': \"LLM Powered Autonomous Agents | Lil'Log\"}), ('type', 'Document'), ('page_content', 'Augmented Language Models#\\nA survey on augmented language models by Mialon et al. (2023) has great coverage over multiple categories of language models augmented with reasoning skills and the ability of using external tools. Recommend it.\\nRetrieval#\\nOften we need to complete tasks that require latest knowledge after the model pretraining time cutoff or internal/private knowledge base. In that case, the model would not know the context if we don’t explicitly provide it in the prompt. Many methods for Open Domain Question Answering depend on first doing retrieval over a knowledge base and then incorporating the retrieved content as part of the prompt. The accuracy of such a process depends on the quality of both retrieval and generation steps.'), ('metadata', {'description': 'Prompt Engineering, also known as In-Context Prompting, refers to methods for how to communicate with LLM to steer its behavior for desired outcomes without updating the model weights. It is an empirical science and the effect of prompt engineering methods can vary a lot among models, thus requiring heavy experimentation and heuristics.\\nThis post only focuses on prompt engineering for autoregressive language models, so nothing with Cloze tests, image generation or multimodality models.', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-03-15-prompt-engineering/', 'title': \"Prompt Engineering | Lil'Log\"}), ('type', 'Document'), ('page_content', 'Lazaridou et al. (2022) studied how to use Google Search for document retrieval to augment LLMs. Given a question $q$, clean text is extracted out of 20 URLs returned by Google, resulting in a set of documents. Because these documents are long, each document is split into paragraphs of 6 sentences, $\\\\{p\\\\}$. Paragraphs are ranked by TF-IDF based cosine similarity between evidence paragraphs and the query. Only the most relevant paragraph is used in the prompt to produce an answer $a$.'), ('metadata', {'description': 'Prompt Engineering, also known as In-Context Prompting, refers to methods for how to communicate with LLM to steer its behavior for desired outcomes without updating the model weights. It is an empirical science and the effect of prompt engineering methods can vary a lot among models, thus requiring heavy experimentation and heuristics.\\nThis post only focuses on prompt engineering for autoregressive language models, so nothing with Cloze tests, image generation or multimodality models.', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-03-15-prompt-engineering/', 'title': \"Prompt Engineering | Lil'Log\"}), ('type', 'Document')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain_core.runnables import RunnablePassthrough\n",
+    "from operator import itemgetter\n",
+    "import re\n",
+    "\n",
+    "def extract_score_from_output(content):\n",
+    "    pattern = r\"#Answer:\\s*(-?\\d+(?:\\.\\d+)?)\"\n",
+    "    matches = re.findall(pattern, content)\n",
+    "    \n",
+    "    if matches:\n",
+    "        try:\n",
+    "            score = float(matches[0])\n",
+    "            return score\n",
+    "        except ValueError as e:\n",
+    "            print(f\"Error converting score to float: {e}\")\n",
+    "    return None\n",
+    "\n",
+    "template = \"\"\"\n",
+    "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "    \n",
+    "You are developing a retrieval(context) evaluator system. \n",
+    "Define the criteria that determine if a retrieved document is relevant to a user's question. \n",
+    "Your goal is to create a set of guidelines that the system will follow to assess relevance accurately. \n",
+    "First, consider the key elements that indicate relevance between a user's question and a retrieved document. \n",
+    "Think about how the system can analyze the content to make this determination effectively.\n",
+    "Consider the fact that retrieval will not be used when the score is below 0.5.\n",
+    "Please ANSWER TOTOAL SCORE IN FORMAT '#Answer:float'.\n",
+    "<|eot_id|>\n",
+    "<|start_header_id|>user<|end_header_id|>\n",
+    "Context : {context}\n",
+    "User Question : {question}<|eot_id|>\n",
+    "<|start_header_id|>assistant<|end_header_id|>\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "rag_chain = (\n",
+    "    {\"context\": itemgetter(\"context\"),\n",
+    "    \"question\": itemgetter(\"question\")}\n",
+    "    | prompt\n",
+    "    | llm\n",
+    ")\n",
+    "\n",
+    "filtered_rags = []\n",
+    "for rag in rags:\n",
+    "    output = rag_chain.invoke({\"context\": rag, \"question\": question})\n",
+    "    score = extract_score_from_output(output.content)\n",
+    "    if (score is not None and score > 0.5):\n",
+    "        filtered_rags.extend(rag)\n",
+    "\n",
+    "print(filtered_rags)"
    ]
   },
   {
@@ -231,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "id": "9a5fecaa-02b4-4cc0-9de0-672b81e9e965",
    "metadata": {},
    "outputs": [
@@ -239,31 +311,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content='No context.' response_metadata={'model': 'llama3', 'created_at': '2024-06-18T08:07:56.329883Z', 'message': {'role': 'assistant', 'content': ''}, 'done_reason': 'stop', 'done': True, 'total_duration': 354902708, 'load_duration': 3375875, 'prompt_eval_count': 58, 'prompt_eval_duration': 292145000, 'eval_count': 4, 'eval_duration': 57440000} id='run-f45bfd4c-0dee-4fa9-bf6e-29cedf55eb68-0'\n"
+      "content='According to the provided context, there are two types of memory mentioned:\\n\\n1. **Short-term memory**: This refers to all in-context learning (see Prompt Engineering) as utilizing short-term memory of the model to learn.\\n2. **Long-term memory**: This provides the agent with the capability to retain and recall (infinite) information over extended periods, often by leveraging an external vector store and fast retrieval.\\n\\nAdditionally, it is mentioned that the design of generative agents combines LLM with memory, planning, and reflection mechanisms to enable agents to behave conditioned on past experience, as well as to interact with other agents.' response_metadata={'model': 'llama3', 'created_at': '2024-06-18T11:20:00.066057Z', 'message': {'role': 'assistant', 'content': ''}, 'done_reason': 'stop', 'done': True, 'total_duration': 5681183167, 'load_duration': 993750, 'prompt_eval_count': 1503, 'prompt_eval_duration': 2872049000, 'eval_count': 125, 'eval_duration': 2802593000} id='run-2e00cf8d-15ca-472d-98b0-1be34f994e2b-0'\n"
      ]
     }
    ],
    "source": [
-    "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain_core.runnables import RunnablePassthrough\n",
-    "from operator import itemgetter\n",
-    "\n",
-    "def documents_to_dicts(documents):\n",
-    "    result = []\n",
-    "    for doc in documents:\n",
-    "        doc_dict = {\n",
-    "            \"page_content\": doc.page_content,\n",
-    "            \"metadata\": {\n",
-    "                \"description\": doc.metadata.get('description', ''),\n",
-    "                \"language\": doc.metadata.get('language', ''),\n",
-    "                \"source\": doc.metadata.get('source', ''),\n",
-    "                \"title\": doc.metadata.get('title', '')\n",
-    "            }\n",
-    "        }\n",
-    "        result.append(doc_dict)\n",
-    "    return result\n",
-    "\n",
-    "# # Decomposition\n",
     "template = \"\"\"\n",
     "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
     "    \n",
@@ -272,16 +324,12 @@
     "'''\n",
     "Context\n",
     "{context}\n",
-    "'''\n",
-    "#Answer [list of numbers]\n",
+    "''\n",
     "<|eot_id|>\n",
     "<|start_header_id|>user<|end_header_id|>\n",
     "\n",
     "{question}<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
     "\"\"\"\n",
-    "\n",
-    "context_text = \"\\n\\n\\n\".join(doc.page_content for doc in similar_documents)\n",
-    "\n",
     "\n",
     "prompt = ChatPromptTemplate.from_template(template)\n",
     "\n",
@@ -292,7 +340,7 @@
     "    | llm\n",
     ")\n",
     "\n",
-    "output = rag_chain.invoke({\"context\": similar_documents, \"question\": question})\n",
+    "output = rag_chain.invoke({\"context\": filtered_rags, \"question\": question})\n",
     "\n",
     "print(output)\n",
     "\n",
