--- a/day2.ipynb
+++ b/day2.ipynb
@@ -40,7 +40,7 @@
     "import os\n",
     "\n",
     "# Set the API key\n",
-    "# os.environ['OPENAI_API_KEY'] = \"\""
+    "os.environ['OPENAI_API_KEY'] = \"sk-\""
    ]
   },
   {
@@ -75,8 +75,8 @@
     "3. 관련성 체크 (cosine similarity가 N이상인지?) [v]\n",
     "4. 통과 못한 경우 context에 없다고 답변 [v]\n",
     "5. 통과한 경우 RAG + query를 넣어서 답변 [v]\n",
-    "6. 할루시네이션 체크 (근거가 있는 사실인지 물어보기)\n",
-    "7. 할루시네이션이 아닌 경우 바로 답변\n",
+    "6. 할루시네이션 체크 (근거가 있는 사실인지 물어보기) [v]\n",
+    "7. 할루시네이션이 아닌 경우 바로 답변 [v]\n",
     "8. 할루시네이션인 경우 다시 답변 생성 (retry 5 times)"
    ]
   },
@@ -135,18 +135,7 @@
    "execution_count": 7,
    "id": "987067b9-de9d-4969-a712-9485888fb0b1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.retrievers.multi_query import MultiQueryRetriever\n",
     "\n",
@@ -155,8 +144,7 @@
     "    retriever=vectordb.as_retriever(), llm=llm\n",
     ")\n",
     "\n",
-    "rags = retriever_from_llm.invoke(question)\n",
-    "len(rags)"
+    "rags = retriever_from_llm.invoke(question)"
    ]
   },
   {
@@ -230,15 +218,7 @@
    "execution_count": 9,
    "id": "1b95f799-2d26-45fe-8cc5-0cb71a9baf30",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('page_content', 'Short-term memory: I would consider all the in-context learning (See Prompt Engineering) as utilizing short-term memory of the model to learn.\\nLong-term memory: This provides the agent with the capability to retain and recall (infinite) information over extended periods, often by leveraging an external vector store and fast retrieval.\\n\\n\\nTool use\\n\\nThe agent learns to call external APIs for extra information that is missing from the model weights (often hard to change after pre-training), including current information, code execution capability, access to proprietary information sources and more.'), ('metadata', {'description': 'Building agents with LLM (large language model) as its core controller is a cool concept. Several proof-of-concepts demos, such as AutoGPT, GPT-Engineer and BabyAGI, serve as inspiring examples. The potentiality of LLM extends beyond generating well-written copies, stories, essays and programs; it can be framed as a powerful general problem solver.\\nAgent System Overview In a LLM-powered autonomous agent system, LLM functions as the agent’s brain, complemented by several key components:', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/', 'title': \"LLM Powered Autonomous Agents | Lil'Log\"}), ('type', 'Document'), ('page_content', 'Short-term memory: I would consider all the in-context learning (See Prompt Engineering) as utilizing short-term memory of the model to learn.\\nLong-term memory: This provides the agent with the capability to retain and recall (infinite) information over extended periods, often by leveraging an external vector store and fast retrieval.\\n\\n\\nTool use'), ('metadata', {'description': 'Building agents with LLM (large language model) as its core controller is a cool concept. Several proof-of-concepts demos, such as AutoGPT, GPT-Engineer and BabyAGI, serve as inspiring examples. The potentiality of LLM extends beyond generating well-written copies, stories, essays and programs; it can be framed as a powerful general problem solver.\\nAgent System Overview In a LLM-powered autonomous agent system, LLM functions as the agent’s brain, complemented by several key components:', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/', 'title': \"LLM Powered Autonomous Agents | Lil'Log\"}), ('type', 'Document'), ('page_content', '... (Repeated many times)'), ('metadata', {'description': 'Building agents with LLM (large language model) as its core controller is a cool concept. Several proof-of-concepts demos, such as AutoGPT, GPT-Engineer and BabyAGI, serve as inspiring examples. The potentiality of LLM extends beyond generating well-written copies, stories, essays and programs; it can be framed as a powerful general problem solver.\\nAgent System Overview In a LLM-powered autonomous agent system, LLM functions as the agent’s brain, complemented by several key components:', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/', 'title': \"LLM Powered Autonomous Agents | Lil'Log\"}), ('type', 'Document'), ('page_content', 'The design of generative agents combines LLM with memory, planning and reflection mechanisms to enable agents to behave conditioned on past experience, as well as to interact with other agents.'), ('metadata', {'description': 'Building agents with LLM (large language model) as its core controller is a cool concept. Several proof-of-concepts demos, such as AutoGPT, GPT-Engineer and BabyAGI, serve as inspiring examples. The potentiality of LLM extends beyond generating well-written copies, stories, essays and programs; it can be framed as a powerful general problem solver.\\nAgent System Overview In a LLM-powered autonomous agent system, LLM functions as the agent’s brain, complemented by several key components:', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-06-23-agent/', 'title': \"LLM Powered Autonomous Agents | Lil'Log\"}), ('type', 'Document'), ('page_content', 'Augmented Language Models#\\nA survey on augmented language models by Mialon et al. (2023) has great coverage over multiple categories of language models augmented with reasoning skills and the ability of using external tools. Recommend it.\\nRetrieval#\\nOften we need to complete tasks that require latest knowledge after the model pretraining time cutoff or internal/private knowledge base. In that case, the model would not know the context if we don’t explicitly provide it in the prompt. Many methods for Open Domain Question Answering depend on first doing retrieval over a knowledge base and then incorporating the retrieved content as part of the prompt. The accuracy of such a process depends on the quality of both retrieval and generation steps.'), ('metadata', {'description': 'Prompt Engineering, also known as In-Context Prompting, refers to methods for how to communicate with LLM to steer its behavior for desired outcomes without updating the model weights. It is an empirical science and the effect of prompt engineering methods can vary a lot among models, thus requiring heavy experimentation and heuristics.\\nThis post only focuses on prompt engineering for autoregressive language models, so nothing with Cloze tests, image generation or multimodality models.', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-03-15-prompt-engineering/', 'title': \"Prompt Engineering | Lil'Log\"}), ('type', 'Document'), ('page_content', 'Lazaridou et al. (2022) studied how to use Google Search for document retrieval to augment LLMs. Given a question $q$, clean text is extracted out of 20 URLs returned by Google, resulting in a set of documents. Because these documents are long, each document is split into paragraphs of 6 sentences, $\\\\{p\\\\}$. Paragraphs are ranked by TF-IDF based cosine similarity between evidence paragraphs and the query. Only the most relevant paragraph is used in the prompt to produce an answer $a$.'), ('metadata', {'description': 'Prompt Engineering, also known as In-Context Prompting, refers to methods for how to communicate with LLM to steer its behavior for desired outcomes without updating the model weights. It is an empirical science and the effect of prompt engineering methods can vary a lot among models, thus requiring heavy experimentation and heuristics.\\nThis post only focuses on prompt engineering for autoregressive language models, so nothing with Cloze tests, image generation or multimodality models.', 'language': 'en', 'source': 'https://lilianweng.github.io/posts/2023-03-15-prompt-engineering/', 'title': \"Prompt Engineering | Lil'Log\"}), ('type', 'Document')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain_core.runnables import RunnablePassthrough\n",
@@ -288,9 +268,7 @@
     "    output = rag_chain.invoke({\"context\": rag, \"question\": question})\n",
     "    score = extract_score_from_output(output.content)\n",
     "    if (score is not None and score > 0.5):\n",
-    "        filtered_rags.extend(rag)\n",
-    "\n",
-    "print(filtered_rags)"
+    "        filtered_rags.extend(rag)"
    ]
   },
   {
@@ -306,15 +284,7 @@
    "execution_count": 10,
    "id": "9a5fecaa-02b4-4cc0-9de0-672b81e9e965",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "content='According to the provided context, there are two types of memory mentioned:\\n\\n1. **Short-term memory**: This refers to all in-context learning (see Prompt Engineering) as utilizing short-term memory of the model to learn.\\n2. **Long-term memory**: This provides the agent with the capability to retain and recall (infinite) information over extended periods, often by leveraging an external vector store and fast retrieval.\\n\\nAdditionally, it is mentioned that the design of generative agents combines LLM with memory, planning, and reflection mechanisms to enable agents to behave conditioned on past experience, as well as to interact with other agents.' response_metadata={'model': 'llama3', 'created_at': '2024-06-18T11:20:00.066057Z', 'message': {'role': 'assistant', 'content': ''}, 'done_reason': 'stop', 'done': True, 'total_duration': 5681183167, 'load_duration': 993750, 'prompt_eval_count': 1503, 'prompt_eval_duration': 2872049000, 'eval_count': 125, 'eval_duration': 2802593000} id='run-2e00cf8d-15ca-472d-98b0-1be34f994e2b-0'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "template = \"\"\"\n",
     "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
@@ -340,23 +310,7 @@
     "    | llm\n",
     ")\n",
     "\n",
-    "output = rag_chain.invoke({\"context\": filtered_rags, \"question\": question})\n",
-    "\n",
-    "print(output)\n",
-    "\n",
-    "# rag_chain.invoke(\"What is Task Decomposition?\")\n",
-    "\n",
-    "\n",
-    "# # LLM\n",
-    "# llm = ChatOpenAI(temperature=0)\n",
-    "\n",
-    "# # Chain\n",
-    "# generate_queries_decomposition = ( prompt_decomposition | llm | StrOutputParser() | (lambda x: x.split(\"\\n\")))\n",
-    "\n",
-    "# # Run\n",
-    "# question = \"What are the main components of an LLM-powered autonomous agent system?\"\n",
-    "# questions = generate_queries_decomposition.invoke({\"question\":question})\n",
-    "\n"
+    "output = rag_chain.invoke({\"context\": filtered_rags, \"question\": question})\n"
    ]
   },
   {
@@ -369,8 +323,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "30d36208-a269-48fe-bbb7-286fec56604a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Based on the given context, it seems that you are referring to the concept of agent memory in the context of LLM-powered autonomous agents.\n",
+      "\n",
+      "In this context, agent memory refers to the ability of an agent to retain and recall information over extended periods. This is different from short-term memory, which is used for learning and processing information in real-time.\n",
+      "\n",
+      "According to the text, long-term memory provides the agent with the capability to retain and recall (infinite) information over extended periods, often by leveraging an external vector store and fast retrieval.\n",
+      "\n",
+      "In addition, the text mentions that LLM-powered autonomous agents combine LLM with memory, planning, and reflection mechanisms to enable agents to behave conditioned on past experience, as well as interact with other agents. This suggests that agent memory plays a crucial role in enabling these agents to learn from their experiences and adapt to new situations.\n",
+      "\n",
+      "Overall, agent memory is an important aspect of LLM-powered autonomous agents, allowing them to retain and recall information over time and use it to inform their decision-making processes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def extract_boolean_from_output(content):\n",
+    "    pattern = r\"#Answer:\\s*(True|False)\"\n",
+    "    matches = re.findall(pattern, content, re.IGNORECASE)  # Using re.IGNORECASE to handle different cases like 'true' or 'false'\n",
+    "    \n",
+    "    if matches:\n",
+    "        answer = matches[0].lower()\n",
+    "        return True if answer == 'true' else False\n",
+    "    return None\n",
+    "\n",
+    "template = \"\"\"\n",
+    "<|begin_of_text|><|start_header_id|>system<|end_header_id|>\n",
+    "    \n",
+    "You are a hallucination checker AI. Your task is to assess whether a given answer generated by the LLM model corresponds to a user's question and determine if it exhibits signs of hallucination. \n",
+    "If the answer is deemed hallucinatory, provide guidance on how to identify and correct such responses. If the answer is coherent, acknowledge its clarity and relevance to the question.\n",
+    "\n",
+    "Take a deep breath and let's take this step by step.\n",
+    "\n",
+    "Analyze the user's question carefully.\n",
+    "Evaluate the LLM-generated answer in relation to the question.\n",
+    "Determine if the answer shows signs of hallucination or if it directly addresses the question.\n",
+    "If hallucination is detected, provide feedback on how to improve the response.\n",
+    "If the answer is coherent, acknowledge its relevance and clarity.\n",
+    "Please answer \"#Answer:true\" if it is hallucinated otherwise \"#Answer:false\"\n",
+    "<|eot_id|>\n",
+    "<|start_header_id|>user<|end_header_id|>\n",
+    "LLM-generated answer\n",
+    "{answer}\n",
+    "''\n",
+    "User question\n",
+    "{question}<|eot_id|><|start_header_id|>assistant<|end_header_id|>\n",
+    "\"\"\"\n",
+    "\n",
+    "prompt = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "rag_chain = (\n",
+    "    {\"answer\": itemgetter(\"answer\"),\n",
+    "    \"question\": itemgetter(\"question\")}\n",
+    "    | prompt\n",
+    "    | llm\n",
+    ")\n",
+    "\n",
+    "final_output = rag_chain.invoke({\"answer\": output.content, \"question\": question})\n",
+    "\n",
+    "is_hallucinated = extract_boolean_from_output(final_output.content)\n",
+    "if not is_hallucinated:\n",
+    "    print(output.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04f417ba-c856-47a0-bdac-090fecf601dc",
    "metadata": {},
    "outputs": [],
    "source": []
